User redirected to '/events/search' under magnifying glass. Fixed .empty? errors if no params are present for users and events #search. Notification spacing.

--- a/app/assets/stylesheets/notifications.scss
+++ b/app/assets/stylesheets/notifications.scss
@@ -83,6 +83,7 @@
 			    font-size: .9em;
 			    text-align: center;
 			    max-width: 500px;
+			    margin: 0 auto;
 			}
 			div.notification-box {
 				height: 150px;
